--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
           <a href="#" class="top-logo" title="珠海习悦信息技术有限公司">
             珠海习悦信息技术有限公司
           </a>
-          <a href="index_en.html" class="language-sbtn">English</a>
+          <a href="page/index_en.html" class="language-sbtn">English</a>
           <ul class="top-ul">
             <li>
               <a href="#" class="nav-btn home-btn">首页</a>
             </li>
             <li>
-              <a href="#" class="nav-btn technology-btn">核心技术</a>
+              <a href="javascript:void(0)" class="nav-btn technology-btn">核心技术</a>
             </li>
             <li>
-              <a href="#" class="nav-btn application-btn">技术应用</a>
+              <a href="javascript:void(0)" class="nav-btn application-btn">技术应用</a>
             </li>
             <li>
-              <a href="#" class="nav-btn company-btn">关于我们</a>
+              <a href="javascript:void(0)" class="nav-btn company-btn">关于我们</a>
             </li>
             <li>
-              <a href="https://dev.zhthinkjoy.com/" target="_blank" class="nav-btn platform-btn">开发者平台</a>
+              <a href="javascript:void(0)" target="_blank" class="nav-btn platform-btn">开发者平台</a>
             </li>
             <li>
-              <a href="joinUs.html" target="_self" class="nav-btn join-btn">加入我们</a>
+              <a href="page/joinUs.html" target="_self" class="nav-btn join-btn">加入我们</a>
             </li>
             <li class="language-btns">
-              <a href="index_en.html" target="_self">English</a>
+              <a href="page/index_en.html" target="_self">English</a>
             </li>
           </ul>
       </div>
@@ -362,15 +362,15 @@
                     <ul class="clearfix">
                       <!-- 人脸识别 -->
                       <li class="face-server" onclick="location.href='https://dev.zhthinkjoy.com/APIFile/faceApi/Android'">
-                        <a href="#">人脸识别</a>
+                        <a href="javascript:void(0)">人脸识别</a>
                       </li>
                       <!-- 物体识别 -->
                       <li class="object-server" onclick="location.href='https://dev.zhthinkjoy.com/APIFile/objectApi/Android'">
-                        <a href="#">物体识别</a>
+                        <a href="javascript:void(0)">物体识别</a>
                       </li>
                       <!-- 更多服务 -->
                       <li class="more-server" onclick="location.href='https://dev.zhthinkjoy.com'">
-                        <a href="#">更多服务 ></a>
+                        <a href="javascript:void(0)">更多服务 ></a>
                       </li>
                     </ul>
                   </div>
@@ -415,13 +415,13 @@
                       </li>
                     </ul>
                   </div>
-                  <a href="joinUs.html" target="_self" class="joinus-bigbtn">加入我们 ></a>
+                  <a href="page/joinUs.html" target="_self" class="joinus-bigbtn">加入我们 ></a>
                 </div>
               </div>
               <div class="page-foot">
                 <p>
                   © 2015 珠海习悦信息技术有限公司
-                  <a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备14031142号</a>
+                  <a href="javascript:void(0)" target="_blank">粤ICP备14031142号</a>
                 </p>
               </div>
             </div>
